[fixes] styles overflow fix and min changes

--- a/src/components/BuyFormModal/styles.css
+++ b/src/components/BuyFormModal/styles.css
@@ -10,6 +10,7 @@
   letter-spacing: 1px;
   z-index: 2;
   bottom: 0;
+  border-radius: 3px;
 }
 
 .buyFormModal__sliderDown {
@@ -43,7 +44,8 @@
   position: relative;
   top: 3rem;
   justify-content: center;
-  width: 95%;;
+  width: 95%;
+  ;
 }
 
 .buyForm__grid {
