--- a/src/pages/cart/styles.css
+++ b/src/pages/cart/styles.css
@@ -33,11 +33,15 @@
 }
 
 .cart__orderInfo--container {
-    box-shadow: 2px 2px 3px 0px black;
     font-family: orbitron;
-    width: 70%;
-    margin-top: 1rem;
-    background-color: #eaeaea;
+    width: 56%;
+    background-color: #292929;
+    color: rgb(207, 207, 207);
+    border: 1px solid darkgray;
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .cart__orderInfo--details {
@@ -45,6 +49,7 @@
     flex-direction: column;
     line-height: 0px;
     margin-top: 1rem;
+    align-items: center;
 }
 
 .cart__orderInfo--details h5 {
